--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-redux": "^6.0.9",
     "@types/redux-logger": "^3.0.6",
+    "fuzzy": "^0.1.3",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.1",
