--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/react-redux": "^6.0.9",
     "@types/redux-logger": "^3.0.6",
+    "classnames": "^2.2.6",
     "fuzzy": "^0.1.3",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
@@ -12,7 +14,8 @@
     "react-scripts-ts": "3.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tsmonad": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
